--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ section {
 
 #title h1 {
 	font-size: 64px;
-	text-shadow: 2px -2px 0px #75964c, 4px -4px 0px #3B4A26;
+	text-shadow: 0px 0px 8px #3B4A26;
 }
 
 #title h1 a {
