--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,10 @@ section {
 	color: #fff;
 	text-decoration: none;
 }
+#title img {
+	float: right;
+	margin-top: -69px;
+}
 
 #navigation {
 	background-color: #ccc;
